# dzsc

./: .gitignore  Makefile_agentation_debug  Makefile_frontend_debug  README.md  frontend_debug_sourcemap.yml  pyproject.toml  toggle_z8_debug_sourcemaps.py
src/dzsc/: __init__.py  __main__.py  builtin.py  cli.py  common.py  payloads.py  sdk.py  stages_agentation.py  stages_frontend.py  stages_jit_agent_runtime.py  stages_schema.py
src/dzsc/static/agent-runtime/java/pro/doczilla/dzsc/agent/: DzscAgentBridge.java  DzscAgentRuntime.java
src/dzsc/static/config/: frontend_debug_sourcemap.yml
src/dzsc/static/gradle/: agentation-debug-overlay.gradle  jit-agent-runtime.gradle  z8-debug-sourcemaps.gradle
